fix-requested-changes

--- a/homeworks/maksym.selenkov_MaksymSelenkov/5-rxjs/index.html
+++ b/homeworks/maksym.selenkov_MaksymSelenkov/5-rxjs/index.html
@@ -11,7 +11,7 @@
     <body>
         <div class="container" data-container>
             <header class="header" data-header>
-                <span class="header__logo">Logo</span>
+                <a class="header__logo" href="">Logo</a>
                 <div data-burger>
                     <div class="header__burger-icon"></div>
                     <div class="header__burger-icon"></div>
@@ -24,7 +24,7 @@
                 </nav>
                 <button type="button" class="header__buy" data-buy>Buy now</button>
             </header>
-            <main class="main" data-main>
+            <main class="main">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet illum, placeat quasi qui quidem tempora velit! Dolores, sapiente, sequi. Aliquam atque dolor eveniet ex harum ipsa maxime, porro suscipit voluptas.
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci dicta ducimus eius id magnam molestiae nesciunt omnis perferendis ratione reiciendis? Ad error iusto libero minima nemo omnis repudiandae sunt, tempore.
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto commodi cupiditate, dignissimos doloremque dolorum est eveniet in libero magnam nemo saepe tempore temporibus unde ut voluptas? Ea molestiae quam velit?
