fix js,css and html

--- a/homeworks/Aleksandr.Turuta_turuta7/5-rxjs/index.html
+++ b/homeworks/Aleksandr.Turuta_turuta7/5-rxjs/index.html
@@ -10,28 +10,28 @@
     </head>
 
     <body class="body" data-body>
-        <label class="nav__label-chech" for="check">
-            <input class="nav__label-chech-input" type="checkbox" id="check" data-input>
-            <span ></span>
-            <span></span>
-            <span></span>
+        <label class="nav__label-chech">
+            <input class="nav__label-chech-input" type="checkbox" data-input>
+            <span class="nav__label-chech-span_one"></span>
+            <span class="nav__label-chech-span_two"></span>
+            <span class="nav__label-chech-span_three"></span>
         </label>
 
         <header class="header" data-header>
             <div class="header__logo">
                 <h1 class="header__title">Logo</h1>
             </div>
-            <nav class="header__nav nav" data-naigation>
+            <nav class="header__nav nav" data-navigation>
                 <ul class="nav__list">
-                    <ul class="nav__list-item">
+                    <li class="nav__list-item">
                         <a class="nav__list-item-link" href="#">Новости</a>
-                    </ul>
-                    <ul class="nav__list-item">
+                    </li>
+                    <li class="nav__list-item">
                         <a class="nav__list-item-link" href="#">Контакты</a>
-                    </ul>
-                    <ul class="nav__list-item">
+                    </li>
+                    <li class="nav__list-item">
                         <a class="nav__list-item-link" href="#">Про нас</a>
-                    </ul>
+                    </li>
                 </ul>
 
             </nav>
