fix js,css and html

--- a/homeworks/Aleksandr.Turuta_turuta7/5-rxjs/index.html
+++ b/homeworks/Aleksandr.Turuta_turuta7/5-rxjs/index.html
@@ -12,9 +12,9 @@
     <body class="body" data-body>
         <label class="nav__label-chech">
             <input class="nav__label-chech-input" type="checkbox" data-input>
-            <span class="nav__label-chech-span_one"></span>
-            <span class="nav__label-chech-span_two"></span>
-            <span class="nav__label-chech-span_three"></span>
+            <span class="nav__label-chech-span_one nav__label-chech-span"></span>
+            <span class="nav__label-chech-span_two nav__label-chech-span"></span>
+            <span class="nav__label-chech-span_three nav__label-chech-span"></span>
         </label>
 
         <header class="header" data-header>
