--- a/homeworks/Aleksandr.Turuta_turuta7/5-rxjs/index.html
+++ b/homeworks/Aleksandr.Turuta_turuta7/5-rxjs/index.html
@@ -155,7 +155,7 @@
                     tempora tenetur magnam doloremque!
                 </p>
                 <div>
-                    <button class="main__button" type="button">Buy now</button>
+                    <input type="button" class="main__button" value="Buy now">
                 </div>
                 <p class="main__contalner-text">
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga dignissimos quos natus delectus possimus,
