--- a/homeworks/nikolay.krasniuk_Kingstar22/5-rxjs/index.html
+++ b/homeworks/nikolay.krasniuk_Kingstar22/5-rxjs/index.html
@@ -6,7 +6,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>5-RXJS</title>
         <link rel="stylesheet" href="style.css">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/rxjs/6.6.3/rxjs.umd.min.js" integrity="sha512-JnZPWAckMDks0CCIeGznqEo7ifmYK7VowHq/NVFlSXGkwxv4OBCJFy7nouOtJZmVldHo7FQLIdeWTI55yyZc4Q==" crossorigin="anonymous"></script>
     </head>
     <body>
         <section class="main">
@@ -14,7 +13,7 @@
                 <div class="main__wrapper">
                     <a class="main__header-logo">Logo</a>
                     <div data-header-burger class="main__header-burger">
-                        <span></span>
+                        <span class="main__header-burger-line"></span>
                     </div>
                     <ul data-menu class="main__nav-menu">
                         <li class="main__nav-menu-item">
@@ -34,7 +33,6 @@
                         </li>
                     </ul>
                 </div>
-
                 <button type ="button" class="main__header-btn">BUY NOW</button>
             </header>
             <main class="main__content">
@@ -42,7 +40,7 @@
                 <p class="main__content-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio animi, officiis sit impedit exercitationem sed nemo alias sapiente vero dolore est eum quam explicabo et omnis porro illo similique vel.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio animi, officiis sit impedit exercitationem sed nemo alias sapiente vero dolore est eum quam explicabo et omnis porro illo similique vel.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio animi, officiis sit impedit exercitationem sed nemo alias sapiente vero dolore est eum quam explicabo et omnis porro illo similique vel.</p>
                 <p class="main__content-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio animi, officiis sit impedit exercitationem sed nemo alias sapiente vero dolore est eum quam explicabo et omnis porro illo similique vel.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio animi, officiis sit impedit exercitationem sed nemo alias sapiente vero dolore est eum quam explicabo et omnis porro illo similique vel.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio animi, officiis sit impedit exercitationem sed nemo alias sapiente vero dolore est eum quam explicabo et omnis porro illo similique vel.</p>
                 <p class="main__content-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio animi, officiis sit impedit exercitationem sed nemo alias sapiente vero dolore est eum quam explicabo et omnis porro illo similique vel.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio animi, officiis sit impedit exercitationem sed nemo alias sapiente vero dolore est eum quam explicabo et omnis porro illo similique vel.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio animi, officiis sit impedit exercitationem sed nemo alias sapiente vero dolore est eum quam explicabo et omnis porro illo similique vel.</p>
-                <button type ="button" class="main__content-btn">BUY NOW</button>
+                <button data-btn type ="button" class="main__content-btn">BUY NOW</button>
                 <p class="main__content-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio animi, officiis sit impedit exercitationem sed nemo alias sapiente vero dolore est eum quam explicabo et omnis porro illo similique vel.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio animi, officiis sit impedit exercitationem sed nemo alias sapiente vero dolore est eum quam explicabo et omnis porro illo similique vel.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio animi, officiis sit impedit exercitationem sed nemo alias sapiente vero dolore est eum quam explicabo et omnis porro illo similique vel.</p>
                 <p class="main__content-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio animi, officiis sit impedit exercitationem sed nemo alias sapiente vero dolore est eum quam explicabo et omnis porro illo similique vel.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio animi, officiis sit impedit exercitationem sed nemo alias sapiente vero dolore est eum quam explicabo et omnis porro illo similique vel.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio animi, officiis sit impedit exercitationem sed nemo alias sapiente vero dolore est eum quam explicabo et omnis porro illo similique vel.</p>
                 <p class="main__content-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio animi, officiis sit impedit exercitationem sed nemo alias sapiente vero dolore est eum quam explicabo et omnis porro illo similique vel.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio animi, officiis sit impedit exercitationem sed nemo alias sapiente vero dolore est eum quam explicabo et omnis porro illo similique vel.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio animi, officiis sit impedit exercitationem sed nemo alias sapiente vero dolore est eum quam explicabo et omnis porro illo similique vel.</p>
@@ -51,6 +49,7 @@
                 <p class="main__content-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio animi, officiis sit impedit exercitationem sed nemo alias sapiente vero dolore est eum quam explicabo et omnis porro illo similique vel.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio animi, officiis sit impedit exercitationem sed nemo alias sapiente vero dolore est eum quam explicabo et omnis porro illo similique vel.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio animi, officiis sit impedit exercitationem sed nemo alias sapiente vero dolore est eum quam explicabo et omnis porro illo similique vel.</p>
             </main>
         </section>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/rxjs/6.6.3/rxjs.umd.min.js" integrity="sha512-JnZPWAckMDks0CCIeGznqEo7ifmYK7VowHq/NVFlSXGkwxv4OBCJFy7nouOtJZmVldHo7FQLIdeWTI55yyZc4Q==" crossorigin="anonymous"></script>
         <script src="script.js"></script>
     </body>
 </html>
