fixed menu burger and button

--- a/homeworks/Aleksandr.Turuta_turuta7/5-rxjs/index.html
+++ b/homeworks/Aleksandr.Turuta_turuta7/5-rxjs/index.html
@@ -10,18 +10,17 @@
     </head>
 
     <body class="body" data-body>
-        <label class="nav__label-chech">
-            <input class="nav__label-chech-input" type="checkbox" data-input>
-            <span class="nav__label-chech-span_one nav__label-chech-span"></span>
-            <span class="nav__label-chech-span_two nav__label-chech-span"></span>
-            <span class="nav__label-chech-span_three nav__label-chech-span"></span>
-        </label>
-
         <header class="header" data-header>
             <div class="header__logo">
                 <h1 class="header__title">Logo</h1>
+                <label class="label-checkbox">
+                    <input class="label-checkbox-input" type="checkbox" data-input>
+                    <span class="label-checkbox-span--one label-checkbox-span"></span>
+                    <span class="label-checkbox-span--two label-checkbox-span"></span>
+                    <span class="label-checkbox-span--three label-checkbox-span"></span>
+                </label>
             </div>
-            <nav class="header__nav nav" data-navigation>
+            <nav class="header__nav nav sticky" data-navigation>
                 <ul class="nav__list">
                     <li class="nav__list-item">
                         <a class="nav__list-item-link" href="#">Новости</a>
@@ -154,8 +153,8 @@
                     tempore id ipsam praesentium explicabo vero provident officiis. Eveniet quo eaque voluptates molestiae
                     tempora tenetur magnam doloremque!
                 </p>
-                <div>
-                    <input type="button" class="main__button" value="Buy now">
+                <div class="main__button">
+                    <input type="button" class="main__button-buy-now" value="Buy now">
                 </div>
                 <p class="main__contalner-text">
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga dignissimos quos natus delectus possimus,
