--- a/homeworks/nikolay.krasniuk_Kingstar22/5-rxjs/index.html
+++ b/homeworks/nikolay.krasniuk_Kingstar22/5-rxjs/index.html
@@ -11,7 +11,8 @@
         <section class="main">
             <header data-header-menu class="main__header active">
                 <div class="main__wrapper">
-                    <a class="main__header-logo">Logo</a>
+                    <a data-logo class="main__header-logo">Logo</a>
+                    <a data-active-logo class="main__header-logo-scroll">Get an amazing discount</a>
                     <div data-header-burger class="main__header-burger">
                         <span class="main__header-burger-line"></span>
                     </div>
@@ -33,7 +34,7 @@
                         </li>
                     </ul>
                 </div>
-                <button type ="button" class="main__header-btn">BUY NOW</button>
+                <button data-active-btn type ="button" class="main__header-btn">BUY NOW</button>
             </header>
             <main class="main__content">
                 <p class="main__content-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio animi, officiis sit impedit exercitationem sed nemo alias sapiente vero dolore est eum quam explicabo et omnis porro illo similique vel.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio animi, officiis sit impedit exercitationem sed nemo alias sapiente vero dolore est eum quam explicabo et omnis porro illo similique vel.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio animi, officiis sit impedit exercitationem sed nemo alias sapiente vero dolore est eum quam explicabo et omnis porro illo similique vel.</p>
