Fixed mobile button and class

--- a/homeworks/ivan.bieliaiev_Ckakipaki/5-rxjs/index.html
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/5-rxjs/index.html
@@ -26,7 +26,7 @@
                 <h1 href="#" class="titleButton__title">
                     Get an amazing discount
                 </h1>
-                <button type="button" class="header__button" data-afterBtn-button>Buy me</button>
+                <button type="button" class="header__button-afterBtn" data-afterBtn-button>Buy me</button>
             </div>
         </header>
         <main class="main" data-main>
