renamed variable in js

--- a/homeworks/andrii.kholodenko_AndriiCold/5-rxjx/index.html
+++ b/homeworks/andrii.kholodenko_AndriiCold/5-rxjx/index.html
@@ -21,7 +21,7 @@
                         <use xlink:href="#logo"></use>
                     </svg>
                 </a>
-                <div class="main-header-bar" data-navigation-wrapper>
+                <div class="main-header-bar" data-main-header-bar>
                     <div class="burger" data-header-burger>
                         <span class="burger__line" data-burger-line></span>
                     </div>
