added styles for mobile devices, changed colors

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/5-rxjs/index_rxjs.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/5-rxjs/index_rxjs.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header class="header" data-header>
-            <div class="header-logo">NightWatchers</div>
+            <div class="header-logo" data-logo>NightWatchers</div>
             <ul class="header__menu" data-menu>
                 <li class="header__menu-item">
                     <a href="#" class="header__menu-item-link">About us</a>
