fix issues revealed by html linter

--- a/homeworks/kostya.bublyk_ConstBagel/5-rxjs/index.html
+++ b/homeworks/kostya.bublyk_ConstBagel/5-rxjs/index.html
@@ -12,7 +12,9 @@
                 <section
                     class="header__main"
                     data-role="header-main-section">
-                    <h1 class="header__title"><a class="header__link" href="#">Logo</a></h1>
+                    <h1 class="header__title">
+                        <a class="header__link" href="#">Logo</a>
+                    </h1>
                     <button 
                         type="button"
                         class="header__burger"
