--- a/homeworks/Aleksandr.Turuta_turuta7/6-typescript/src/index.html
+++ b/homeworks/Aleksandr.Turuta_turuta7/6-typescript/src/index.html
@@ -8,7 +8,12 @@
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        <main class="main">
+
+        <main class="main" data-main>
+            <header class="header_main">
+                <button class="button___new-game" type="button" data-button-new-game>New Game</button>
+                <button class="button__stop-game" type="button" data-button-stop-game>Stop Game</button>
+            </header>
             <h1 class="main__title">Game "Ball"</h1>
             <div class="main__ball">
                 <div class = "ball" data-ball></div>
