check key value,  cur points and total score logic done

--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/6-typescript/src/index.html
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/6-typescript/src/index.html
@@ -11,11 +11,11 @@
             <button type="button" disabled>Restart</button>
         </header>
         <main class="main-content">
-            <div class="total-score">100</div>
+            <div class="total-score" data-total-score>100</div>
             <svg height="100" width="100" class="bubble">
                 <circle cx="50" cy="50" r="40" fill="red"></circle>
             </svg>
-            <div class="cur-points">-10</div>
+            <div class="cur-points" data-cur-points>-10</div>
             <div class="alphabet-letter" data-condition-container>U</div>
             <progress class="progress-bar" max="100" value="1" data-progress-bar></progress>
         </main>
