--- a/homeworks/serhii.kulakivskyi_svkul/6-typescript/index.html
+++ b/homeworks/serhii.kulakivskyi_svkul/6-typescript/index.html
@@ -11,27 +11,43 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Rubik:wght@700&display=swap" rel="stylesheet">
     </head>
     <body>
+        <header class="header">
+            <h1 class="header__title">TypIngGaMe</h1>
+
+            <div class="controls">
+                <button class="button button--main" data-init type="button">Start</button>
+                <button class="button button--main" data-restart type="button">Restart</button>
+            </div>
+        </header>
+
         <section class="game__wrapper">
             <header class="info-wrapper">
-                <div class="controls">
-                    <button class="button button--main" data-init type="button">Start</button>
-                    <button class="button button--main" data-restart type="button">Restart</button>
-                </div>
-
                 <p class="score" data-score>Are you ready?</p>
             </header>
 
             <main class="content" data-content>
                 <div class="balloon">
-                    <div class="balloon__item" data-balloon style="width: 100px; height: 100px;"></div>
+                    <div class="balloon__item" data-balloon></div>
                 </div>
             </main>
 
-            <footer>
+            <footer class="footer">
                 <div>
                     <p class="char" data-char></p>
                 </div>
+
+                <div class="progress-bar" data-progress-wrapper>
+                    <div class="progress-bar__line" data-progress-bar></div>
+                </div>
             </footer>
+        </section>
+
+        <section class="scores__wrapper">
+            <h2>Top 10 best game scores:</h2>
+
+            <ul class="scores__list" data-scores-list>
+                <li class="scores__item">Empty...</li>
+            </ul>
         </section>
     </body>
 </html>
