first positive result, full logic done

--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/6-typescript/src/index.html
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/6-typescript/src/index.html
@@ -8,14 +8,14 @@
         <header class="header">
             <button type="button" data-start-btn>Start</button>
             <button type="button" data-stop-btn>Stop</button>
-            <button type="button" disabled>Restart</button>
+            <button type="button" data-restart-btn>Restart</button>
         </header>
         <main class="main-content">
             <div class="total-score" data-total-score>100</div>
             <svg height="100" width="100" class="bubble">
                 <circle cx="50" cy="50" r="40" fill="red"></circle>
             </svg>
-            <div class="cur-points" data-cur-points>-10</div>
+            <div class="cur-points" data-cur-points>0</div>
             <div class="alphabet-letter" data-condition-container>U</div>
             <progress class="progress-bar" max="100" value="1" data-progress-bar></progress>
         </main>
