--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/6-typescript/src/index.html
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/6-typescript/src/index.html
@@ -13,7 +13,7 @@
         <main class="main-content">
             <div class="total-score" data-total-score>100</div>
             <svg height="100" width="100" class="bubble">
-                <circle cx="50" cy="50" r="40" fill="red"></circle>
+                <circle cx="50" cy="50" r="25" fill="orange"></circle>
             </svg>
             <div class="cur-points" data-cur-points>0</div>
             <div class="alphabet-letter" data-condition-container>U</div>
