fix issues with linters

--- a/homeworks/kostya.bublyk_ConstBagel/6-typescript/index.html
+++ b/homeworks/kostya.bublyk_ConstBagel/6-typescript/index.html
@@ -1,25 +1,25 @@
 <!doctype html>
 
-<html>
-  <head>
-    <title>Game TS</title>
-    <link rel="stylesheet" href="styles/style.css">
-  </head>
+<html lang="en">
+    <head>
+        <title>Game TS</title>
+        <link rel="stylesheet" href="styles/style.css">
+    </head>
 
-  <body>
-    <div class="page-wrapper">
-      <header class="page-header">
-        <h1 class="header-title">Game</h1>
-      </header>
-      <main class="page-main">
-        <div class="main-circle">
-          <p class="main-scores" data-role="scores"></p>
+    <body>
+        <div class="page-wrapper">
+            <header class="page-header">
+                <h1 class="header-title">Game</h1>
+            </header>
+            <main class="page-main">
+                <div class="main-circle">
+                    <p class="main-scores" data-role="scores"></p>
+                </div>
+            </main>
+            <footer class="page-footer">
+                <p class="main-letter" data-role="random-letter"></p>
+            </footer>
         </div>
-      </main>
-      <footer class="page-footer">
-        <p class="main-letter" data-role="random-letter"></p>
-      </footer>
-    </div>
-    <script src="./dist/bundle.js"></script>
-  </body>
+        <script src="./dist/bundle.js"></script>
+    </body>
 </html>
