change css style

--- a/homeworks/vadim.fedonyuk_Vadim1997/6-typescript/src/index.html
+++ b/homeworks/vadim.fedonyuk_Vadim1997/6-typescript/src/index.html
@@ -5,10 +5,10 @@
         <title>Title</title>
     </head>
     <body>
-        <div>
-            <div class="total-score" data-tottal-score></div>
-            <div class="current-score" data-current-score>+10</div>
-            <div class="letters-container" data-letters-container>T</div>
-        </div>
+        <section class="game-section">
+            <div class="game-section__total-score" data-tottal-score></div>
+            <div class="game-section__current-score" data-current-score>+10</div>
+            <div class="game-section__letters-container" data-letters-container>T</div>
+        </section>
     </body>
 </html>
