redundant text is deleted and information items are corrected

--- a/homeworks/ihor.kropyvnyi_20-Igorek-21/6-typescript/src/index.html
+++ b/homeworks/ihor.kropyvnyi_20-Igorek-21/6-typescript/src/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>6-typescript</title>
-        <script src="../dist/bundle.js"></script>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <section class="main-container">
@@ -12,6 +12,7 @@
                 <span class="account" data-account-current></span>
                 <span class="account" data-account-minus-number></span>
             </section>
+            <span class="game-popup" data-game-popup></span>
             <div class="game-circle" data-game-circle></div>
             <div class="game-key" data-game-key></div>
             <div data-game-loader></div>
