--- a/homeworks/andrii.kholodenko_AndriiCold/6-typescript/src/index.html
+++ b/homeworks/andrii.kholodenko_AndriiCold/6-typescript/src/index.html
@@ -8,11 +8,11 @@
     </head>
     <body>
         <section class="game">
-            <div class="total-score" data-total-score></div>
-            <div class="bubble" data-bubble>
-                <div class="dynamic-score" data-dynamic-score></div>
+            <div class="game__total-score" data-total-score></div>
+            <div class="game__bubble" data-bubble>
+                <div class="game__dynamic-score" data-dynamic-score></div>
             </div>
-            <div class="key" data-key></div>
+            <div class="game__key" data-key></div>
         </section>
     </body>
 </html>
