--- a/homeworks/maksym.selenkov_MaksymSelenkov/6-adaptive/index.html
+++ b/homeworks/maksym.selenkov_MaksymSelenkov/6-adaptive/index.html
@@ -48,51 +48,136 @@
                         <p class="section__text">Need to send something on time? Delivery is process of transporting goods from a source location to a predefined destination.</p>
                     </section>
                     <section class="services__cards cards">
-                        <div class="cards__item card">
+                        <div class="cards__item card card01">
                             <img src="./images/card01.svg" alt="card01.svg">
                             <h3 class="card__title">Industry-leading tech</h3>
                             <p class="card__text">Delivery is process of transporting from source point to predefined destination.</p>
                         </div>
-                        <div class="cards__item card">
+                        <div class="cards__item card card02">
                             <img src="./images/card02.svg" alt="card02.svg">
                             <h3 class="card__title">Nationwide coverage</h3>
                             <p class="card__text">Delivery is process of transporting from source point to predefined destination.</p>
                         </div>
-                        <div class="cards__item card">
+                        <div class="cards__item card card03">
                             <img src="./images/card03.svg" alt="card03.svg">
                             <h3 class="card__title">Fastest Delivery</h3>
                             <p class="card__text">Delivery is process of transporting from source point to predefined destination.</p>
                         </div>
-                        <div class="cards__item card">
+                        <div class="cards__item card card04">
                             <img src="./images/card04.svg" alt="card04.svg">
                             <h3 class="card__title">Next day payment</h3>
                             <p class="card__text">Delivery is process of transporting from source point to predefined destination.</p>
                         </div>
-                        <div class="cards__item card">
+                        <div class="cards__item card card05">
                             <img src="./images/card05.svg" alt="card05.svg">
                             <h3 class="card__title">Best COD rates</h3>
                             <p class="card__text">Delivery is process of transporting from source point to predefined destination.</p>
                         </div>
-                        <div class="cards__item card">
+                        <div class="cards__item card card06">
                             <img src="./images/card06.svg" alt="card06.svg">
                             <h3 class="card__title">Secure handling</h3>
                             <p class="card__text">Delivery is process of transporting from source point to predefined destination.</p>
                         </div>
-                        <div class="cards__item card">
+                        <div class="cards__item card card07">
                             <img src="./images/card07.svg" alt="card07.svg">
                             <h3 class="card__title">Product insurance</h3>
                             <p class="card__text">Delivery is process of transporting from source point to predefined destination.</p>
                         </div>
-                        <div class="cards__item card">
+                        <div class="cards__item card card08">
                             <img src="./images/card08.svg" alt="card08.svg">
                             <h3 class="card__title">Verified Products</h3>
                             <p class="card__text">Delivery is process of transporting from source point to predefined destination.</p>
                         </div>
-                        <div class="cards__item card">
+                        <div class="cards__item card card09">
                             <img src="./images/card09.svg" alt="card09.svg">
                             <h3 class="card__title">Realtime Monitoring</h3>
                             <p class="card__text">Delivery is process of transporting from source point to predefined destination.</p>
                         </div>
+                    </section>
+                </section>
+                <section class="apply">
+                    <picture class="apply__picture">
+                        <source srcset="./images/bonik delivery img 02 1@2x.png" media="(min-width: 1440px)">
+                        <img src="./images/bonik%20delivery%20img%2002%201.png" alt="bonik">
+                    </picture>
+                    <section class="apply__heading section__heading">
+                        <h2 class="section__title">Apply for Ambassador</h2>
+                        <p class="section__text">Need to send something on time? Delivery is process of transporting goods from a source location to a predefined destination.</p>
+                        <button class="menu__button" type="button">Apply Now</button>
+                    </section>
+                </section>
+                <section class="news">
+                    <section class="news__heading section__heading">
+                        <h2 class="section__title">Company News Our Latest Artical & Tips for You</h2>
+                    </section>
+                    <article class="news__items">
+                        <div class="news__item article">
+                            <picture class="article__picture">
+                                <source srcset="./images/Rectangle 21@2x.png" media="(min-width: 1440px)">
+                                <img src="./images/Rectangle%2021.png" alt="bonik">
+                            </picture>
+                            <div class="article__under-picture under-picture">
+                                <span class="under-picture__title">UI / UX Design</span>
+                                <div>
+                                    <img src="./images/eye.svg" alt="eye">
+                                    <span class="under-picture__counter">12450</span>
+                                </div>
+                            </div>
+                            <h3 class="article__title">Our UX studio digitally transforms business through design</h3>
+                            <p class="article__text">All of these problems are addressable through UX and gamification in particular. That’s not to say that it’s a cure-all.</p>
+                            <a href="" class="article__link">
+                                <img src="./images/learn.svg" alt="learn">
+                            </a>
+                        </div>
+                        <div class="news__item article">
+                            <picture class="article__picture">
+                                <source srcset="./images/Rectangle 22@2x.png" media="(min-width: 1440px)">
+                                <img src="./images/Rectangle%2022.png" alt="bonik">
+                            </picture>
+                            <div class="article__under-picture under-picture">
+                                <span class="under-picture__title">Apps Design</span>
+                                <div>
+                                    <img src="./images/eye.svg" alt="eye">
+                                    <span class="under-picture__counter">2953</span>
+                                </div>
+                            </div>
+                            <h3 class="article__title">Your customer do need comprehensive course to learn how to use your app.</h3>
+                            <p class="article__text">Let’s be honest. Finance isn’t exactly pinnacle fun.Online companies introduced gamification elements to their products reach up to a 700% increase in conversion rates.</p>
+                            <a href="" class="article__link">
+                                <img src="./images/learn.svg" alt="learn">
+                            </a>
+                        </div>
+                        <div class="news__item article">
+                            <picture class="article__picture">
+                                <source srcset="./images/Rectangle 20@2x.png" media="(min-width: 1440px)">
+                                <img src="./images/Rectangle%2020.png" alt="bonik">
+                            </picture>
+                            <div class="article__under-picture under-picture">
+                                <span class="under-picture__title">Product Experience</span>
+                                <div>
+                                    <img src="./images/eye.svg" alt="eye">
+                                    <span class="under-picture__counter">7980</span>
+                                </div>
+                            </div>
+                            <h3 class="article__title">Scale your startup through exceptional product experience</h3>
+                            <p class="article__text">Our UX design agency creates solutions to address product usability conversion rates an the ever-present challenges of user-retention & engagement.</p>
+                            <a href="" class="article__link">
+                                <img src="./images/learn.svg" alt="learn">
+                            </a>
+                        </div>
+                    </article>
+                </section>
+                <section class="clients">
+                    <section class="clients__heading section__heading">
+                        <h2 class="section__title">Our Clients</h2>
+                    </section>
+                    <section class="clients__logo">
+                        <img src="./images/google.svg" alt="google">
+                        <img src="./images/microsoft.svg" alt="microsoft">
+                        <img src="./images/flickr.svg" alt="flickr">
+                        <img src="./images/slack.svg" alt="slack">
+                        <img src="./images/syngenta.svg" alt="syngenta">
+                        <img src="./images/merck.svg" alt="merck">
                     </section>
                 </section>
             </main>
